# TEE-Based-Intrusion-Detection

./: .gitignore  Android.mk  CMakeLists.txt  README.md  idtt.conf
aide/: Makefile  Makefile.am  conf_lex.c  config.h  configure.ac  getheader.sh  gptMakefile  gptMakefile1  tpMakefile
aide/include/: aide.h  commandconf.h  config.h
aide/orgmakefile/: Makefile
aide/src/: aide.c  attributes.c  base64.c  be.c  commandconf.c  conf_eval.c  db_file.c  do_md.c  gen_list.c  getopt.c  list.c  log.c  report.c  symboltable.c  util.c
aide/tests/: check_attributes.c
host/: Makefile  config.h  db.h  genfile.c  genfile.h  idtt  idtt.c  idtt.conf  idtt.h  list.c  list.h  orgMakefile  readconf.c  readconf.h  util.c  util.h
host/ext/: db_config.h
host/include/: aide.h  attributes.h  commandconf.h  conf_ast.h  config.h  db_config.h  do_md.h  errorcodes.h  genfile.h  idtt.h  list.h  log.h  readconf.h  types.h  util.h
host/src/: aide.c  commandconf.c  conf_lex.l  db.c  db_disk.c  db_file.c  db_list.c  gen_list.c  idtt.c  log.c  report.c  to_ta.c  util.c
ta/: db.h  idtt_ta.c  idtt_ta_command_handler.c  secure_storage.c  sub.mk  ta_command_handler.c  user_ta_header_defines.h
ta/include/: config.h  db.h  db_config.h  db_line.h  idtt_ta.h  idtt_ta_command.h  secure_storage.h  ta_command.h
